// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot when not toggled 1`] = `
<DocumentFragment>
  <section
    class="container"
    data-test="more-options"
  >
    <header
      class="header"
      data-test="more-options-header"
    >
      <svg
        class="jsx-4098137027 chevronHidden"
        viewBox="0 0 48 48"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          class="jsx-4098137027"
          d="M20 12l-2.83 2.83L26.34 24l-9.17 9.17L20 36l12-12z"
        />
      </svg>
      <h2
        class="label"
      >
        Advanced options
      </h2>
    </header>
    <div
      class="jsx-1555285825 jsx-876534464 "
      data-test="dhis2-uicore-divider"
    />
    <div
      class="children"
      data-test="more-options-children"
    />
  </section>
</DocumentFragment>
`;

exports[`matches snapshot when toggled 1`] = `
<DocumentFragment>
  <section
    class="container"
    data-test="more-options"
  >
    <header
      class="header"
      data-test="more-options-header"
    >
      <svg
        class="jsx-4098137027 chevronVisible"
        viewBox="0 0 48 48"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          class="jsx-4098137027"
          d="M20 12l-2.83 2.83L26.34 24l-9.17 9.17L20 36l12-12z"
        />
      </svg>
      <h2
        class="label"
      >
        Advanced options
      </h2>
    </header>
    <div
      class="jsx-1555285825 jsx-876534464 "
      data-test="dhis2-uicore-divider"
    />
    <div
      class="children"
      data-test="more-options-children"
    >
      <p>
        Child paragraph
      </p>
    </div>
  </section>
</DocumentFragment>
`;

exports[`matches snapshot when toggled and different label 1`] = `
<DocumentFragment>
  <section
    class="container"
    data-test="more-options"
  >
    <header
      class="header"
      data-test="more-options-header"
    >
      <svg
        class="jsx-4098137027 chevronVisible"
        viewBox="0 0 48 48"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          class="jsx-4098137027"
          d="M20 12l-2.83 2.83L26.34 24l-9.17 9.17L20 36l12-12z"
        />
      </svg>
      <h2
        class="label"
      >
        Details
      </h2>
    </header>
    <div
      class="jsx-1555285825 jsx-876534464 "
      data-test="dhis2-uicore-divider"
    />
    <div
      class="children"
      data-test="more-options-children"
    >
      <p>
        Child paragraph
      </p>
    </div>
  </section>
</DocumentFragment>
`;
